# impact-simulation

./: CMakeLists.txt  README.md
Dependencies/glfw-3.2.1/src/: win32_joystick.c
graphics/: Drawer.h
physics/Shapes/: Shape.cpp  Shape.h
